Fix project link for Pokémon mini-game
Updated project link for Pokémon mini-game.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="project-item">
                 <h3>Mini-jeu Pokémon C++</h3>
                 <p>Un petit jeu Pokémon pour PC développé en C++.</p>
-                <a href="projets/minijeu_pokemon.zip" download>Télécharger</a>
+                <a href="https://nathyger.github.io/mon-portfolio/pokemon/">Télécharger</a>
             </div>
         </section>
 
@@ -82,3 +82,4 @@
 
 </body>
 </html>
+
